feat(server): add LIST/CARD/MOVE_CARD + realtime broadcast EVENT_*

--- a/client/build.gradle
+++ b/client/build.gradle
@@ -10,8 +10,9 @@ dependencies {
 }
 
 application {
-    mainClass = 'vn.vku.kanban.client.Main'
+    mainClass = 'vn.vku.kanban.client.App'
     applicationDefaultJvmArgs = ['-Xmx256m']
+
 }
 
 javafx {
