--- a/server/build.gradle
+++ b/server/build.gradle
@@ -5,6 +5,7 @@ plugins {
 dependencies {
     implementation 'com.google.code.gson:gson:2.11.0' // cho JSON sau này
     testImplementation 'org.junit.jupiter:junit-jupiter:5.11.3'
+    implementation 'com.mysql:mysql-connector-j:8.4.0'
 }
 
 application {
